--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 
             <div class="inner cover">
                 <h1 class="cover-heading">betteridiots.org</h1>
-                <blockquote>"If you make something idiot proof, someone will just make a better idiot" - Murphy's Law Corollary</blockquote>
+                <blockquote>
+                    <p>"If you make something idiot proof, someone will just make a better idiot"</p>
+                    <footer>Corollary: Murphy's Law</footer>
+                </blockquote>
                 <p class="lead">Welcome to betteridiots.org, where we build software for the idiots of tomorrow</p>
                 <p>Check back soon, we're just getting started</p>
                 <p class="lead">
